<resources>

    <string name="app_name">Expertise Locator</string>
    <string name="image_content_description">Image Content</string>
    <string name="count">0</string>
    <string name="no_data">No Data</string>
    <string name="no_network">Please check the internet connection </string>
    <string name="language">en</string>
    <string name="todo">TODO</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="toolbar_name">ToolBar_Name</string>

    <!--Experts Profile-->
    <string name="download_resume">Download Resume</string>
    <string name="solution">Solution</string>
    <string name="collaboration">Collaboration</string>
    <string name="thank_expert">Thank Expert</string>
    <string name="submit_request">Submit Request</string>
    <string name="expertprofile">Expert Profile</string>

    <string name="edu_heading">Education </string>
    <string name="title">Title</string>
    <string name="proficiency">Proficiency</string>
    <string name="start_year">Start Year</string>
    <string name="end_year">End_year</string>
    <string name="college">College / University</string>
    <string name="insert_edu_msg">Enter the Education Information..</string>
    <string name="nodata_following">There is no following</string>



    <!-- Navigation Menu -->
    <string name="about">About</string>
    <string name="timeline">Timeline</string>
    <string name="following">Following</string>
    <string name="thanks">Thanks</string>
    <string name="messaging">Messaging</string>
    <string name="solutions">Solutions</string>
    <string name="collaborations">Collaborations</string>
    <string name="followers">Followers</string>
    <string name="credits">Credits</string>
    <string name="awards">Awards</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="santhosh_kumar">Santhosh kumar</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="cxm_i_tf">CXM,I TF</string>
    <string name="about_me">About Me</string>
    <string name="permmision_denied">Permmision Denied</string>


    <!--Post Activity --> <!--Dialogbox-->
    <string name="video_link_title">Video Link</string>
    <string name="video_link">Enter the video URL</string>
    <string name="video_link_here">video URL Here</string>
    <string name="here">Enter here.</string>
    <string name="add_post">Add your post</string>
    <string name="post">Post</string>
    <string name="edt_post">Edit Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="share_post">Share Post</string>
    <string name="post_msg">Please Post the Message</string>
    <string name="delete_post_msg">Are you sure you want to delete this post ?</string>
    <string name="edit_post_msg">Edit your Post and it will be updated to your followers.</string>
    <string name="share_post_msg">Share this Post and it can be viewed by your followers.</string>


    <!--Toolbar Tittle Name-->
    <string name="user_profile">User Profile</string>
    <string name="search_activity">Search Results</string>
    <string name="following_list_activity">Following</string>
    <string name="follower_activity">Followers</string>



    <!-- Bottom Navigation -->

    <string name="bottom_post">Post</string>
    <string name="bottom_about">About</string>
    <string name="bottom_events">Events</string>
    <string name="bottom_members">Members</string>

    <!-- Material Dialog Temp -->

    <string name="dialog_temp_title">Material Dialog</string>
    <string name="dialog_temp_positive">Agree</string>
    <string name="dialog_temp_negative">Disagree</string>
    <string name="dialog_temp_content">Material Dialog With Positive And Negative Buttons</string>

    <!-- Login Screen -->

    <string name="edit_user_name">Enter Username</string>
    <string name="edit_pass_word">Enter Password</string>
    <string name="button_login">LOGIN</string>

    <!-- Timeline Actions -->

    <string name="timeline_like">Like</string>
    <string name="timeline_comment">Comment</string>
    <string name="timeline_share">Share</string>
    <string name="timeline_username">Username</string>
    <string name="timeline_message">Message</string>
    <string name="timeline_post_time">Posted Time</string>
    <string name="timeline_post_comment_reply">Reply</string>

    <!-- Timeline Menu -->

    <string name="timeline_menu_edit">Edit Post</string>
    <string name="timeline_menu_delete">Delete Post</string>
    <string name="timeline_menu_answered">Mark As Answered</string>
    <string name="timeline_menu_comment_edit">Edit Comment</string>
    <string name="timeline_menu_comment_delete">Delete Comment</string>
    <string name="timeline_menu_reply_edit">Edit Reply</string>
    <string name="timeline_menu_reply_delete">Delete Reply</string>
    <string name="followinglist_menu_msg">MESSAGE</string>
    <string name="followinglist_menu_request">SUBMIT A REQUEST</string>

    <!-- Timeline Hint -->

    <string name="timeline_comment_hint">Add Your Comment..</string>
    <string name="timeline_reply_hint">Add Your Reply..</string>
    <string name="timeline_post_hint">Write a post, Share Photo or Video</string>

    <!-- Timeline Edit Delete - Comment and Reply -->

    <string name="timeline_edit_comment_title">Edit Post Comment</string>
    <string name="timeline_edit_comment_message">Edit your comments and it will be updated to your followers.</string>

    <string name="timeline_delete_comment_title">Delete Post Comment</string>
    <string name="timeline_delete_comment_message">Delete your comments and it will be updated to your followers.</string>

    <string name="timeline_edit_reply_title">Edit Post Reply</string>
    <string name="timeline_edit_reply_message">Edit your reply and it will be updated to your followers.</string>

    <string name="timeline_delete_reply_title">Delete Post Reply</string>
    <string name="timeline_delete_reply_message">Delete your reply and it will be updated to your followers.</string>

    <string name="timeline_delete_comment_query">Are you sure you want to delete this comment ?</string>
    <string name="timeline_delete_reply_query">Are you sure you want to delete this reply ?</string>

    <string name="timeline_edit_post_heading">Edit Post</string>
    <string name="timeline_edit_post_message">Edit your Post and it will be updated to your followers.</string>


    <string name="enter_rply">Please Enter the Reply</string>
    <string name="timeline_edit_delete_update">Update</string>
    <string name="timeline_edit_delete_delete">Delete</string>
    <string name="timeline_edit_delete_cancel">Cancel</string>

    <!--Login Activity-->
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">login</string>

    <!--Post Activity --> <!--Dialogbox-->

    <string name="timeline_like_status">You are the first one to like</string>
    <string name="timeline_comment_status">You are the first one to comment</string>
    <string name="timeline_comment_count">Comment</string>
    <string name="timeline_comments_count">Comments</string>
    <string name="timeline_like_count">Like</string>
    <string name="timeline_likes_count">Likes</string>


    <!--API Failure Toast Msg-->
    <string name="fail_abtme_userprofile"> API Failure </string>
    <string name="fail_addpost_post">Failed Posted</string>
    <string name="fail_addcomment_timeline">Failed Post Comment</string>
    <string name="fail_edit_post_timeline">Failed Edit Post</string>
    <string name="fail_delete_post_timeline">Failed Delete Post</string>


    <!--API Sucess Toast Msg-->
    <string name="success_addpost_post">Successfully Posted.</string>
    <string name="success_edit_post_timeline">Successfully Updated</string>
    <string name="success_delete_post_timeline">Deleted Your Post!</string>
    <string name="loading">Loading..</string>


</resources>
