<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearListMenuItems"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="100dp"
        android:layout_height="100dp">

        <FrameLayout
            android:id="@+id/frameMenuIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/shape_square"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgMenuIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="@string/image_content_description"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_send_black_png" />

        </FrameLayout>

        <TextView
            android:id="@+id/tvMenuBadgeCount"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/shape_count_badge"
            android:gravity="center"
            android:text="@string/count"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/tvMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textColor="@color/nliveo_green_colorPrimaryDark"
        android:textSize="18sp"
        android:maxLines="2"
        android:ellipsize="end"/>

</LinearLayout>