<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgBackground"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/ic_screen_back_ground" />

        <LinearLayout
            android:id="@+id/linearHomeScreenProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/rvMenu"
            app:layout_constraintTop_toTopOf="@+id/imgBackground">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/marginFive"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/solutions" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginThree"
                android:text="@string/no_data"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeLarge"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginThree"
                android:text="@string/no_data"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeMedium" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="160dp"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="@+id/imgBackground" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>