<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/shape_square"
    android:layout_margin="@dimen/marginTwo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/marginThree">

        <ImageView
            android:layout_width="@dimen/widthHeightSixty"
            android:layout_height="@dimen/widthHeightSixty"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/ic_person_black_24dp"
            android:layout_margin="@dimen/marginThree"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/marginThree"
                android:background="@color/nliveo_gray"
                android:textSize="@dimen/textSizeLarge"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginThree"
                android:background="@color/nliveo_gray"
                android:textSize="@dimen/textSizeMedium"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nliveo_gray"
        android:textSize="@dimen/textSizeMedium"
        android:layout_margin="@dimen/marginThree"
        android:maxLines="3"
        android:ellipsize="end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/marginFive"
        android:weightSum="3"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/linearTimelineActionLike"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvTimelineActionLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeline_like"
                android:drawableLeft="@drawable/ic_timeline_like"
                android:drawableStart="@drawable/ic_timeline_like"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearTimelineActionComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvTimelineActionComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeline_comment"
                android:drawableLeft="@drawable/ic_timeline_comment"
                android:drawableStart="@drawable/ic_timeline_comment"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearTimelineActionShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvTimelineActionShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeline_share"
                android:drawableLeft="@drawable/ic_timeline_share"
                android:drawableStart="@drawable/ic_timeline_share"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>